src/css/custom.css
/* stylelint-disable docusaurus/copyright-header */
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #7bacc0;
  --ifm-color-primary-dark: #5f8ab0;
  --ifm-color-primary-darker: #283890;
  --ifm-color-primary-darkest: #3a104c;
  --ifm-color-primary-light: #6997c0;
  --ifm-color-primary-lighter: #7bacc0;
  --ifm-color-primary-lightest: #d2ebe4;
  --ifm-code-font-size: 95%;
  --ifm-link-color: var(--ifm-color-primary-lighter);
}

.highlight {
  color: var(--ifm-color-primary-lighter);
}

.hero--primary {
  --ifm-hero-background-color: #2b3137;
  color: #fff;
}

.button--primary:not(.button--outline) {
  --ifm-button-background-color: var(--ifm-color-primary-lighter);
}

.button--primary {
  --ifm-button-border-color: var(--ifm-color-primary-light);
}

.hero--primary.heroBanner_src-pages-index-module {
  text-align: left;
  padding-bottom: 20rem;
  background: no-repeat center 14rem/50%
    url('/img/checkup-run-transparent-light.png');
}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

html[data-theme='dark'] .docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.3);
}

